2005-08-16  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp: fix compilation on GCC 2.95.x

2005-08-15  Philippe Elie  <phil.el@wanadoo.fr>

	  Fix #1256978: sum of samples count overflow

	* libutil/op_types.h: typedef a unsigned 64 bits count_type
	* libpp/callgraph_container.cpp:
	* libpp/format_output.cpp:
	* libpp/profile.cpp:
	* libpp/profile.h:
	* libpp/profile_container.cpp:
	* libpp/symbol.h:
	* libutil/op_types.h:
	* libutil++/growable_vector.h:
	* pp/opreport.cpp: use it all over place where we need to sum up
	  samples count
	* pp/opgprof.cpp: check for samples count capping for callgraph
	  output

2005-08-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/tests/db_test.c: add a better speed test

2005-08-13  Maynard Johnson <maynardj@us.ibm.com>
	 
	* gui/oprof_start.h:
	* libop/op_events.c:
	* libop/op_events.h:
	* libpp/op_header.cpp: change op_event.val field from u8 to u32 to
	  allow event numbers higher than 0X100.

2005-08-13  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/odb.h: 
	* libdb/db_insert.c:
	* libdb/db_manage.c: use a two step node allocation to ensure adding
	  a node will be sort of atomically visible in another process

2005-08-13  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/odb.h: clarify the way odb_get_iterator work
	* libpp/profile.cpp: use odb_get_iterator properly to ensure we account
	  zero relative offset. This fix a corner case when kernel module get
	  a sample at the first byte of their .text section.

2005-08-11  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp: fix a race when changing the mode and owner
	  of copied file.
	* pp/oparchive.cpp: warn if a file can't be copied, avoid to copy 
	  inexisting image for anon mammping

2005-08-11  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui:
	* libop/op_config.h: add --cpu-buffer-size for 2.6
