@@ -10,7 +10,6 @@ for some pointers and/or read HACKING and doc/CodingStyle.
 
  o amd64 32 bit build needs a sys32_lookup_dcookie() translator in the
    kernel
- o op_bfd.cpp:get_linenr() see FIXME about the use of ibfd/dbfd, needs test.
  o decide on -m tgid semantics for anon regions
  o if ev67 is not fixed, back it out
  o lapic : module should says "didn't find apic" if needed, FAQ and doc should
